# PyRuQo1

./: EXAMPLESINFO.md  LICENSE  LOCALHOSTLLM.md  README.md  pyproject.toml  requirements-ds.txt  requirements-gguf.txt  requirements-train.txt  requirements.txt
examples_scripts/: basic_example.py  build_dataset_multi_server.py  build_dataset_multi_server_math.py  build_dataset_via_api.py  build_university_dataset.py  merge_lora_example.py  merge_low_ram_gigachat.py  merge_low_ram_gigachat3.py  merge_low_ram_ygpt.py  mix_datasets.py  mix_datasets_train_val.py  pdf_math_parser.py  pdf_parser.py  requirements-ds.txt  requirements-train.txt  split_journal.py  test_gguf_math.py  test_gguf_math_gigachat3.py  test_gguf_math_ygpt.py  train_qlora_gigachat3_big_dataset.py  train_qlora_gigachat3_micro_dataset.py  train_qlora_gigachat_big_dataset.py  train_qlora_gigachat_micro_dataset.py  train_qlora_ygpt_big_dataset.py  train_qlora_ygpt_micro_dataset.py
micro_datasets/: university_math_dataset.json  university_thinking_dataset.json  university_train.json  university_val.json
micro_datasets/GigaChatDS/: university_math_dataset.json  university_thinking_dataset.json  university_train.json  university_val.json
micro_datasets/QwenDS/: university_math_dataset.json  university_thinking_dataset.json
npi/: cli.py
npi/config/: __init__.py  default.yaml
npi/dataset/: __init__.py  generator.py  math_parser.py  parser.py  splitter.py
npi/gguf/: __init__.py  converter.py
npi/merge/: __init__.py  merger.py
npi/training/: __init__.py  config.py  formatting.py  trainer.py
npi/utils/: __init__.py  logger.py  swap.py  system.py
pyruqo1/: cli.py
scripts/: basic_example.py  build_dataset_multi_server.py  build_dataset_multi_server_math.py  build_dataset_via_api.py  build_university_dataset.py  merge_lora_example.py  merge_low_ram_example.py  merge_low_ram_gigachat.py  merge_low_ram_gigachat3.py  mix_datasets.py  mix_datasets_train_val.py  pdf_parser.py  split_journal.py  test_gguf_math.py  test_gguf_math_gigachat3.py  train_qlora.py  train_qlora_gigachat3_big_dataset.py  train_qlora_gigachat3_micro_dataset.py  train_qlora_gigachat_big_dataset.py  train_qlora_gigachat_micro_dataset.py  train_qlora_ygpt.py  train_qlora_ygpt_big_dataset.py
tests/: test_chunker.py  test_cli.py  test_config.py  test_generator.py  test_logger.py  test_merger.py  test_parser.py  test_splitter.py  test_swap.py  test_system.py  test_trainer.py
(+26 files in other folders)
