[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyruqo1-reasoning"
version = "0.1.0"
description = "Conveyor for training Russian reasoning LLMs (GigaChat / GigaChat3 / YandexGPT)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "torch==2.7.0",
    "accelerate==1.3.0",
    "transformers==4.53.1",
    "peft==0.19.1",
    "bitsandbytes==0.45.2",
    "trl==0.17.0",
    "datasets==5.0.0",
    "tokenizers==0.21.4",
    "pymupdf==1.24.10",
    "marker-pdf>=1.5.0",
    "surya-ocr==0.20.0",
    "requests==2.32.3",
    "tqdm==4.66.5",
    "rich==13.9.4",
    "PyYAML>=6.0",
    "click>=8.0",
    "psutil>=5.9",
    "sentencepiece==0.2.0",
    "protobuf==5.26.1",
]

[project.optional-dependencies]
gguf = [
    "llama-cpp-python>=0.3.0",
]
test = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
]

[project.scripts]
pyruqo1 = "pyruqo1.cli:cli"

[tool.setuptools.packages.find]
include = ["pyruqo1*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
